# future-sales-prediction

./: .gitignore  pyproject.toml  readme.md
notebooks/: eda.ipynb
