[tool.poetry]
name = "predict-future-sales"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
ipykernel = "^6.0.1"
plotly = "^5.1.0"
nbformat = "^5.1.3"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
